# QuarkML

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: linear_regression_basic.cpp  linear_regression_ridge_demo.cpp
include/ml/core/: Model.hpp  SerializableModel.h  Types.hpp
include/ml/io/: ModelIO.h
include/ml/linear/: LinearRegression.h
src/io/: ModelIO.cpp
src/linear/: LinearRegression.cpp
